# FastAPI-Twitter-like-Service

./: Dockerfile  License  README.md  docker-compose.yml  entrypoint.sh  main.py  nginx.conf
app/: handlers.py  models_pydentic.py
database/: db.py  dekorators.py  func.py  models.py  yadisc.py
python_advanced_diploma/: Readme.md  alembic.ini  cod.py  config.py  nginx.docker.conf  pyproject.toml  requirements.txt
python_advanced_diploma/migrations/: env.py
python_advanced_diploma/static/js/: app.7c9275be.js  chunk-732a3e8c.57e36fb4.js  chunk-76301fe8.cc56c3b1.js
python_advanced_diploma/tests/: conftest.py  funcs.py  handlers.py  initdb.py  main.py
static/: index.html
static/js/: chunk-0420bcc4.11441662.js  chunk-10e0d5b4.e80e67b6.js  chunk-6f77c742.f09861a7.js  chunk-vendors.398321e0.js
tests/: test_app.py  test_dal.py
